# JarvisCore

./: .env.example  .gitignore  ANALYSE.md  ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  AUTO_REFACTOR.md  CHANGELOG.md  CLEANUP_COMPLETED.md  CLEANUP_FINAL_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  IMPLEMENTATION_STATUS.md  INTEGRATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  NOTICE  PINOKIO.md  QUICKSTART_CLEANUP.md  QUICK_CLEANUP.md  README.md  README_GB.md  README_QUICKSTART.md  REFACTORING_GUIDE.md  RELEASE_NOTES_v1.0.0.md  ROOT_CLEANUP_DONE.md  SECURITY.md  UI_CONSOLIDATION.md  VOICE_SETUP_GUIDE.md  apply_native_desktop.py  bootstrap.py  docker-compose.yml  install.json  main.py  main_web.py  package-lock.json  pinokio.js  (+15 more)
.github/workflows/: ci.yml  codeql.yml  release.yml  test.yml
api/: __init__.py  jarvis_api.py
archive/go-services-legacy/: README.md
backend/: .coveragerc  .flake8  README.md  main.py  model_downloader.py  plugin_manager.py  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup_buildtools_path.py  setup_jarvis.py  setup_llama.py  tts_service.py
backend/api/: model_gallery.py  settings.py  tts.py  tts_endpoints.py
backend/core/: event_system.py  hf_inference.py  llm_manager.py  logger.py  plugin_manager.py  tts_service.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_main.py  test_model_downloader.py  test_plugin_manager.py  test_settings.py
backend/utils/: system_info.py
config/: __init__.py  command_patterns.json  gallery.py  hf_token.py  intents.json  knowledge_apis.json  models_gallery.json  persona.py  plugins.json  settings.py  system_prompt.txt  system_prompt_compact.txt  system_prompt_full.txt
core/: __init__.py  adaptive_access_control.py  adaptive_context_manager.py  api_manager.py  async_llm_wrapper.py  audio_playback.py  autonomous_task_core.py  clarification.py  clarification_module.py  command_processor.py  context_manager.py  crawler_client.py  emotion_analyzer.py  hotword_manager.py  knowledge_expansion_agent.py  knowledge_manager.py  knowledge_processor.py  learning_manager.py  llama_inference.py  llm_manager.py  llm_manager_integration.py  llm_router.py  local_knowledge_importer.py  local_knowledge_scanner.py  long_term_memory.py  long_term_trainer.py  media_router.py  memory_manager.py  memory_system.py  model_downloader.py  model_manifest.py  model_registry.py  multi_model_manager.py  plugin_manager.py  plugin_system.py  preferences_manager.py  reinforcement_learning.py  reliable_tts.py  safe_shell.py  security_manager.py  (+20 more)
core/memory/: __init__.py  manager.py
core/model_registry/: __init__.py  downloader.py  manifest.py  modelpath.py  registry.py
core/nlu/: intent_engine.py  normalizer.py
data/: commands.json  commands.template.json  learning_state.json  preferences.json  settings.json  settings.template.json  timeline_memory.json  user_media_prefs.json  vector_memory.json  voice_profiles.json
data/crawler/: crawler.db
data/knowledge/: knowledge_base.json
data/sessions/: session_active.json
data/tts/: xtts_voice_latents.pt
desktop/: .gitignore  DEPRECATED.md  INTEGRATION_EXAMPLE.py  Makefile  QUICKSTART.md  README.md  build.bat  build.sh  config.json.example  go.mod  jarvis_desktop_app.py  jarvis_imgui_app.py  jarvis_imgui_app_full.py  model_manager_extended.py  model_manager_ui.py  model_manager_ui_beautiful.py  start-dev.bat  wails.json
desktop/backend/: go.mod  main.go
desktop/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  VOICE_RECORDING.md  WAILS_INTEGRATION.md  WEBSOCKET.md
desktop/frontend/: index.html  package.json  vite.config.js
docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  AUTO_REFACTOR.md  CHANGELOG.md  CI_CD_STATUS.md  CLEANUP_SUMMARY.md  CONFIGURATION.md  DESIGN_SYSTEM_JARVIS.md  ENHANCED_MODEL_MANAGER.md  FAQ.md  GPU_SELECTION.md  HF_INFERENCE_INTEGRATION.md  IMGUI_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  LLM_DOWNLOAD_SYSTEM.md  MIGRATION.md  MIGRATION_DESKTOP_TO_WEB.md  MIGRATION_GUIDE.md  MODEL_GALLERY.md  MODEL_REGISTRY.md  MULTILINGUAL_VOICE_CLONING.md  PERFORMANCE.md  PROJECT_STATUS.md  QUICKSTART_CLEANUP.md  README_GB.md  README_TESTING_QUICKSTART.md  REFACTORING_GUIDE.md  REFACTORING_ROADMAP.md  ROOT_CLEANUP.md  SECURITY.md  SECURITY_AUDIT.md  SETTINGS_GUIDE.md  TESTING.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  TTS_INTEGRATION_GUIDE.md  UI_CONSOLIDATION.md  UI_SPECIFICATION.md  (+9 more)
docs/architecture/: go-services.md
docs/examples/: stt_endpoint.py
docs/releases/: v1.0.0.md
frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  package.json.test-scripts  tailwind.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
go/: go.mod  go.sum
jarviscore/: cli.py
models/: .gitkeep  __init__.py  download_whisper.py
plugins/: calculator_plugin.py  clarification_plugin.py  conversation_plugin_base.py  memory_plugin.py  news_plugin.py  notes_plugin.py  openlibrary_plugin.py  openstreetmap_plugin.py  pubmed_plugin.py  registry.json  semantic_scholar_plugin.py  spotify_plugin.py  system_info_plugin.py  time_plugin.py  timer_plugin.py  weather_plugin.py  wikidata_plugin.py  wikipedia_plugin.py  wissens_api.py  youtube_plugin.py
scripts/: auto_refactor.py  bootstrap.py  cleanup_root.bat  cleanup_root.py  cleanup_root.sh  cleanup_webapp.py  consolidate_ui.py  fix_pandas_conflict.py  format_code.sh  prepare_release.py  quick_fix_venv.py  remove_old_desktop_ui.py  reorganize_modules.py  run_auto_refactor.bat  run_auto_refactor.sh  setup_cuda.py  setup_env.py  start_desktop.py  start_jarvis.py  start_production.py  start_web.py
services/: model_gallery.py
tests/: test_crawler_auth.py  test_crawler_config.py  test_crawler_guard.py  test_multilingual_tts.py
utils/: authenticator.py  crypto_utils.py  error_reporter.py  logger.py  media_command_parser.py  performance_monitor.py  secure_storage.py  text_shortener.py
webapp/: DEPRECATED.md  PLEASE_DELETE.md  __init__.py  server.py
(+162 files in other folders)
