[project]
name = "jarviscore"
version = "0.1.0"
description = "Lokaler deutscher KI-Assistent mit Sprach- und Weboberfläche."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "JarvisCore Contributors" }]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7,<3",
    "llama-cpp-python>=0.2.90",
    "nltk>=3.8.1",
    "transformers>=4.30.0,<5.0.0",
    "sentence-transformers>=2.2.2",
    "sentencepiece>=0.1.99",
    "huggingface_hub>=0.20.0",
    "wikipedia-api>=0.6.0",
    "isbnlib>=3.10.0",
    "SPARQLWrapper>=2.0.0",
    "reportlab>=3.6.13",
    "pillow>=10.0.0",
    "faster-whisper>=1.0.1",
    "ctranslate2>=3.19",
    "pyaudio>=0.2.13",
    "pyttsx3>=2.90",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "tts>=0.21.3",
    "simpleaudio>=1.0.4",
    "ttkbootstrap>=1.10.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.3,<2.0",
    "pandas>=1.5.3,<2.0",
    "scikit-learn>=1.3.0,<1.6",
    "scipy>=1.10.0,<2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    "websockets>=11.0.0",
    "psutil>=5.9.0",
    "pywin32>=306",
    "speedtest-cli>=2.1.3",
    "gputil>=1.4.0",
    "py-cpuinfo>=9.0.0",
    "pystray>=0.19.5",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "python-json-logger>=2.0.7",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "pyyaml>=6.0.0",
    "pyjwt>=2.7.0",
    "python-multipart>=0.0.6",
    "pyotp>=2.9.0",
]

[project.urls]
homepage = "https://github.com/Lautloserspieler/JarvisCore"
source = "https://github.com/Lautloserspieler/JarvisCore"
